change license to MIT

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
    },
    "licenses": [
        {
-           "type": "Apache License 2.0",
-           "url": "http://www.apache.org/licenses/LICENSE-2.0" 
+           "type": "MIT",
+           "url": "http://opensource.org/licenses/mit-license.php" 
        } 
    ],
    "repositories": [
