Fix index.js and package.json for npm compat.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
            "url": "git://github.com/frank06/riak-js.git" 
        } 
    ],
+   "main": "index",
    "directories": {
        "lib": "./lib"
    },
