add sean to maintainers

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
            "web": "http://franciscotreacy.com" 
        },
        {
+           "name": "Sean Cribbs",
+           "email": "sean@basho.com"
+       },
+       {
            "name": "rick (technoweenie)",
            "web": "http://techno-weenie.net" 
        }   
