--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "riak-js",
-   "version": "0.4.0rc3",
+   "version": "0.4.0",
    "description": "Riak client with support for HTTP and Protocol Buffers",
    "keywords": [
        "riak",
