--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
        {
            "name": "Francisco Treacy",
            "email": "francisco.treacy@gmail.com",
-           "web": "http://franciscotreacy.com" 
+           "url": "http://franciscotreacy.com" 
        },
        {
            "name": "Sean Cribbs",
@@ -20,11 +20,11 @@
        },
        {
            "name": "rick (technoweenie)",
-           "web": "http://techno-weenie.net" 
+           "url": "http://techno-weenie.net" 
        }   
    ],
    "bugs": {
-       "web": "http://github.com/frank06/riak-js/issues" 
+       "url": "http://github.com/frank06/riak-js/issues" 
    },
    "licenses": [
        {
