--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
      "vows": "*",
      "coffee-script": "*"
    },
-   "engines": { "node": ">=0.4.0" }
+   "engines": { "node": ">=0.4.0" },
+   "scripts": { "install": "cake build" }
 }
