--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
    "directories": {
        "lib": "./lib"
    },
-   "os": [ "linux", "darwin" ],
+   "os": [ "linux", "darwin", "sunos" ],
    "dependencies": {
      "xml": "0.0.7"
    },
