--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "sunos"
   ],
   "dependencies": {
-    "xml": "0.0.7"
+    "xml": "0.0.7",
+    "butils": "",
+    "protobuf.js": "",
+    "riakpbc": ""
   },
   "devDependencies": {
     "seq": "0.3.5"
