--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "sunos"
   ],
   "dependencies": {
-    "xml": "0.0.7"
+    "xml": "0.0.7",
+    "poolee": "~0.4.8"
   },
   "devDependencies": {
     "seq": "0.3.5"
