--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "riak-js",
-  "version": "0.9.3",
+  "version": "0.9.4pre1",
   "description": "Node.js client for Riak",
   "keywords": [
     "riak",
