--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "xml": "0.0.7",
     "butils": "",
     "protobuf.js": "",
-    "riakpbc": "0.0.10"
+    "riakpbc": "git://github.com/nlf/riakpbc.git"
   },
   "devDependencies": {
     "seq": "0.3.5",
