--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
   "dependencies": {
     "xml": "0.0.7",
     "butils": "",
-    "protobuf.js": "",
-    "riakpbc": "git://github.com/nlf/riakpbc.git"
+    "protobuf.js": "0.0.17",
+    "riakpbc": "0.0.12"
   },
   "devDependencies": {
     "seq": "0.3.5",
