--- a/package.json
+++ b/package.json
@@ -44,13 +44,12 @@
     "xml": "0.0.7",
     "poolee": "~0.4.8",
     "butils": "",
-    "protobuf.js": "0.0.17",
     "riakpbc": "^2.1.0"
   },
   "devDependencies": {
     "seq": "0.3.5",
     "mocha": "1.7.3",
-    "should": "*",
+    "should": "^4.3.0",
     "async": "*"
   },
   "engines": {
