--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ node_js:
 services:
   - riak
 script:
+  - sudo riak-admin wait-for-service riak_kv riak@127.0.0.1
+  - sudo riak-admin wait-for-service riak_search riak@127.0.0.1
   - make test
